Archive2/89/18369fcf7f01b2/output
+ clang++ -std=c++1y -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:4:10: error: 'p' declared as a pointer to a reference of type 'int &'
    int &*p = &r;
         ^
1 error generated.
